Updated Chp.4 notes

--- a/Notes/Chapter_2.tex
+++ b/Notes/Chapter_2.tex
@@ -191,7 +191,7 @@ $\begin{cases*}
 We want to observe how they behave in relation to each other.\\
 
 Once again, it is important to distinguish the \textbf{sample moments}, $M'_k$ and $M_k$,
-from the \textbf{population momnets}, $\mu'_k = E[X^k]$ and $\mu_k = E[(X-E[X])^k]$,
+from the \textbf{population moments}, $\mu'_k = E[X^k]$ and $\mu_k = E[(X-E[X])^k]$,
 and the \textbf{observed sample moments}, $m'_k = \frac{1}{n}\sum_{i=1}^{n}x_i^k$ and $m_k = \frac{1}{n}\sum_{i=1}^{n}(x_i-\bar{x})^k$.
 
 \nt{
